[gd_scene load_steps=14 format=2]

[ext_resource path="res://Prototype_scenes/Main_Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Music/72. Country.mp3" type="AudioStream" id=2]
[ext_resource path="res://Player character/Note.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/EasyLeveL.gd" type="Script" id=4]
[ext_resource path="res://Lumber/Wood.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/1429807.jpg" type="Texture" id=6]
[ext_resource path="res://Lumber/Grass.png" type="Texture" id=7]
[ext_resource path="res://Lumber/Path tiles.png" type="Texture" id=8]
[ext_resource path="res://Lumber/Grass tiles.png" type="Texture" id=9]
[ext_resource path="res://Lumber/Foreground bush.png" type="Texture" id=10]
[ext_resource path="res://Levels/Light2dGradientFromWhiteToTransparent.png" type="Texture" id=11]
[ext_resource path="res://Levels/Camera2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/Water tile.png" type="Texture" id=13]

[node name="EasyLeveL" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="TextureRect" parent="."]
margin_right = 2880.0
margin_bottom = 1800.0
rect_scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 6 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = -11.0
margin_top = 109.0
margin_right = 346.0
margin_bottom = 141.0
texture = ExtResource( 13 )
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
margin_top = 146.0
margin_right = 346.0
margin_bottom = 216.0
texture = ExtResource( 8 )
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 117.0
margin_right = 346.0
margin_bottom = 157.0
texture = ExtResource( 9 )
stretch_mode = 2

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="Wood2" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 132 )
speed = 350

[node name="Wood3" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 108 )
mark = 1
speed = 350

[node name="Wood4" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 84 )
speed = 350

[node name="Wood5" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 60 )
mark = 1
speed = 350

[node name="Wood6" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 36 )
speed = 350

[node name="Wood7" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, 12 )
mark = 1
speed = 350

[node name="Wood8" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -12 )
speed = 350

[node name="Wood9" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -36 )
mark = 1
speed = 350

[node name="Wood10" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -60 )
mark = 1
speed = 350

[node name="Wood11" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -84 )
speed = 350

[node name="Wood12" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -108 )
mark = 1
speed = 350

[node name="Wood13" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -132 )
speed = 350

[node name="Wood14" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -156 )
mark = 1
speed = 350

[node name="Wood15" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -180 )
speed = 350

[node name="Wood16" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -204 )
mark = 1
speed = 350

[node name="Wood17" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -228 )
speed = 350

[node name="Wood18" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -252 )
mark = 1
speed = 350

[node name="Wood19" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -276 )
speed = 350

[node name="Wood20" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -300 )
mark = 1
speed = 350

[node name="Wood21" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -324 )
speed = 350

[node name="Wood22" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -348 )
mark = 1
speed = 350

[node name="Wood23" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -372 )
speed = 350

[node name="Wood24" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -396 )
mark = 1
speed = 350

[node name="Wood25" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -420 )
speed = 350

[node name="Wood26" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -444 )
mark = 1
speed = 350

[node name="Wood27" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -468 )
speed = 350

[node name="Wood28" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -492 )
mark = 1
speed = 350

[node name="Wood29" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -516 )
speed = 350

[node name="Wood30" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -540 )
mark = 1
speed = 350

[node name="Wood31" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -564 )
speed = 350

[node name="Wood32" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -588 )
mark = 1
speed = 350

[node name="Wood33" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -612 )
speed = 350

[node name="Wood34" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -636 )
mark = 1
speed = 350

[node name="Wood35" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -660 )
speed = 350

[node name="Wood36" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -684 )
mark = 1
speed = 350

[node name="Wood37" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -708 )
speed = 350

[node name="Wood38" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -732 )
mark = 1
speed = 350

[node name="Wood39" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -756 )
speed = 350

[node name="Wood40" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -780 )
mark = 1
speed = 350

[node name="Wood41" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -804 )
speed = 350

[node name="Wood42" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -828 )
mark = 1
speed = 350

[node name="Wood43" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -852 )
speed = 350

[node name="Wood44" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -876 )
mark = 1
speed = 350

[node name="Wood45" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -900 )
speed = 350

[node name="Wood46" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -924 )
mark = 1
speed = 350

[node name="Wood47" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -948 )
speed = 350

[node name="Wood48" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -972 )
mark = 1
speed = 350

[node name="Wood49" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -996 )
speed = 350

[node name="Wood50" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1020 )
mark = 1
speed = 350

[node name="Wood51" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1044 )
speed = 350

[node name="Wood52" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1068 )
mark = 1
speed = 350

[node name="Wood53" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1092 )
speed = 350

[node name="Wood54" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1116 )
mark = 1
speed = 350

[node name="Wood55" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1140 )
speed = 350

[node name="Wood56" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1164 )
mark = 1
speed = 350

[node name="Wood57" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1188 )
speed = 350

[node name="Wood58" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1212 )
mark = 1
speed = 350

[node name="Wood59" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1236 )
speed = 350

[node name="Wood60" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1260 )
mark = 1
speed = 350

[node name="Wood61" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1284 )
speed = 350

[node name="Wood62" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1308 )
mark = 1
speed = 350

[node name="Wood63" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1332 )
speed = 350

[node name="Wood64" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1356 )
mark = 1
speed = 350

[node name="Wood65" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1380 )
speed = 350

[node name="Wood66" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1404 )
mark = 1
speed = 350

[node name="Wood67" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1428 )
speed = 350

[node name="Wood68" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1452 )
mark = 1
speed = 350

[node name="Wood69" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1476 )
speed = 350

[node name="Wood70" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1500 )
mark = 1
speed = 350

[node name="Wood71" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1524 )
speed = 350

[node name="Wood72" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1548 )
mark = 1
speed = 350

[node name="Wood73" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1572 )
speed = 350

[node name="Wood74" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1596 )
mark = 1
speed = 350

[node name="Wood75" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1620 )
speed = 350

[node name="Wood76" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1644 )
mark = 1
speed = 350

[node name="Wood77" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1668 )
speed = 350

[node name="Wood78" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1692 )
mark = 1
speed = 350

[node name="Wood79" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1716 )
speed = 350

[node name="Wood80" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1740 )
mark = 1
speed = 350

[node name="Wood81" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1764 )
speed = 350

[node name="Wood82" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1788 )
mark = 1
speed = 350

[node name="Wood83" parent="Game" instance=ExtResource( 5 )]
position = Vector2( 159, -1812 )
speed = 350

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.5

[node name="Timer" type="Timer" parent="Music"]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 159, 158 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 245, 58 )
texture = ExtResource( 11 )
texture_scale = 0.4
energy = 0.4
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 57, 41 )
texture = ExtResource( 11 )
texture_scale = 0.4
energy = 0.4
shadow_enabled = true

[node name="Particles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.0117647, 0.505882, 0, 1 )
position = Vector2( 159, 0 )
amount = 70
lifetime = 20.0
preprocess = 5.0
emission_shape = 2
emission_rect_extents = Vector2( 200, 1 )
direction = Vector2( 0, 20 )
spread = 167.2
gravity = Vector2( 0, 10 )
initial_velocity = 10.0
initial_velocity_random = 0.3
angular_velocity = 100.0
scale_amount = 2.0

[node name="ForegroundBush2" type="Sprite" parent="."]
position = Vector2( 258, 129 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )

[node name="ForegroundBush" type="Sprite" parent="ForegroundBush2"]
position = Vector2( 4, -34.6667 )
texture = ExtResource( 10 )

[node name="ForegroundBush3" type="Sprite" parent="."]
position = Vector2( 64, 128 )
scale = Vector2( -1.5, 1.5 )
texture = ExtResource( 10 )

[node name="ForegroundBush4" type="Sprite" parent="."]
position = Vector2( 35, 69 )
scale = Vector2( -1.5, 1.5 )
texture = ExtResource( 10 )

[node name="Notes" type="YSort" parent="."]
position = Vector2( 264, 193 )

[node name="Note" parent="Notes" instance=ExtResource( 3 )]

[node name="Note2" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 68 )

[node name="Note3" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 95 )

[node name="Note4" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 323 )

[node name="Note5" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 390 )

[node name="Note6" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 472 )

[node name="Note7" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 494 )

[node name="Note8" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 671 )

[node name="Note9" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 792 )

[node name="Note10" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 821 )

[node name="Note11" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 844 )

[node name="Note12" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 903 )

[node name="Note13" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 933 )

[node name="Note14" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 968 )

[node name="Note15" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 992 )

[node name="Note16" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1073 )

[node name="Note17" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1220 )

[node name="Note18" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1247 )

[node name="Note19" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1294 )

[node name="Note20" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1332 )

[node name="Note21" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1366 )

[node name="Note22" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1393 )

[node name="Note23" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1473 )

[node name="Note24" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1601 )

[node name="Note25" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1623 )

[node name="Note26" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1637 )

[node name="Note27" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1664 )

[node name="Note28" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1693 )

[node name="Note29" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1735 )

[node name="Note30" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1765 )

[node name="Note31" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1788 )

[node name="Note32" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1827 )

[node name="Note33" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1853 )

[node name="Note34" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1871 )

[node name="Note35" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1930 )

[node name="Note36" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1962 )

[node name="Note37" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 1997 )

[node name="Note38" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2032 )

[node name="Note39" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2069 )

[node name="Note40" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2089 )

[node name="Note41" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2133 )

[node name="Note42" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2175 )

[node name="Note43" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2201 )

[node name="Note85" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2574 )

[node name="Note44" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2349 )

[node name="Note45" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2407 )

[node name="Note46" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2434 )

[node name="Note47" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2451 )

[node name="Note48" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2500 )

[node name="Note49" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2535 )

[node name="Note50" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2594 )

[node name="Note51" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2678 )

[node name="Note52" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2699 )

[node name="Note53" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2739 )

[node name="Note54" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2781 )

[node name="Note55" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2802 )

[node name="Note56" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2828 )

[node name="Note57" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2845 )

[node name="Note58" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2885 )

[node name="Note59" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2933 )

[node name="Note60" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 2973 )

[node name="Note61" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3001 )

[node name="Note62" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3075 )

[node name="Note63" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3107 )

[node name="Note64" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3140 )

[node name="Note65" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3175 )

[node name="Note66" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3210 )

[node name="Note67" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3228 )

[node name="Note68" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3245 )

[node name="Note69" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3277 )

[node name="Note70" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3294 )

[node name="Note71" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3323 )

[node name="Note72" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3367 )

[node name="Note73" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3409 )

[node name="Note74" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3444 )

[node name="Note75" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3494 )

[node name="Note76" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3531 )

[node name="Note77" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3590 )

[node name="Note78" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3614 )

[node name="Note79" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3651 )

[node name="Note80" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3683 )

[node name="Note81" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3700 )

[node name="Note82" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3741 )

[node name="Note83" parent="Notes" instance=ExtResource( 3 )]
position = Vector2( 0, 3789 )

[node name="Note84" parent="Notes" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 3794 )

[node name="Camera2D" parent="." instance=ExtResource( 12 )]
position = Vector2( 160, 91 )
current = true

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = 49.0
margin_right = 120.0
margin_bottom = 77.0

[connection signal="area_entered" from="Game/Player/Hurt" to="." method="_on_Hurt_area_entered"]
[connection signal="area_entered" from="Game/Player/CanvasLayer/NotePicker/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Music/Timer" to="." method="_on_Timer_timeout"]

[editable path="Game"]
[editable path="Game/Player"]
[editable path="Game/Player/CanvasLayer/NotePicker"]
